--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Belajar Git</title>
 </head>
 <body>
-    <h1>GIT</h1>
+    <h1>GITA Ada yang baru nih</h1>
+<h2>Mau lagi lah</h2>
 </body>
 </html>
